compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_enum_ty_from_type_alias.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type e : enum(a, b, c)"
---
"e"@(FileId(1), 5..6) [Type]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"e"@(FileId(1), 9..22) [Enum]: <error>
"a"@(FileId(1), 14..15) [EnumVariant]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"b"@(FileId(1), 17..18) [EnumVariant]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"c"@(FileId(1), 20..21) [EnumVariant]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "a"@(FileId(1), 14..15), "b"@(FileId(1), 17..18), "c"@(FileId(1), 20..21), )
"<root>"@(dummy) [Module(No)]: <error>

