compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_enum_ty_no_variants.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type e : enum()"
---
"e"@(FileId(1), 5..6) [Type]: enum[DefId(LibraryId(0), LocalDefId(1))] ( )
"e"@(FileId(1), 9..15) [Enum]: <error>
"<root>"@(dummy) [Module(No)]: <error>

