compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_exit_matching_types.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: loop exit when true end loop
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
