compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_exit_wrong_types.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "loop exit when \"gekdu\" end loop"
---
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 15..22): mismatched types
| note for (FileId(1), 15..22): this is of type `string`
| info: expected a `boolean` type
