compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_for_each_not_iterable.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "for : 1 end for"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:6..7: mismatched types
| note for src/main.t:6..7: this is of type `{integer}`
| error for src/main.t:6..7: `{integer}` is not iterable
| info: only arrays types can be iterated over
