compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_implied_bounds_char.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type b : char for _ : b end for"
---
"b"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of char
"_"@"src/main.t:18..19" [ConstVar(Const, No)]: alias[DefId(PackageId(0), LocalDefId(0))] of char
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
