compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_implied_bounds_constrained.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type b : 1 .. 2 for _ : b end for"
---
"b"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"_"@(FileId(1), 20..21) [ConstVar(Const, No)]: alias[DefId(PackageId(0), LocalDefId(0))] of range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

